--- a/m/sub/eventship/championship1.html
+++ b/m/sub/eventship/championship1.html
@@ -146,10 +146,10 @@
                         <li class="on">GTOUR</li>
                         <div>
                             <li><a href="championship.html">골프존 라이브 페스티벌 GLF 대회</a></li>
-                            <li><a href="championship2.html">OPEN TOUR</a></li>
+                            <!-- <li><a href="championship2.html">OPEN TOUR</a></li>
                             <li><a href="championship3.html">GATOUR</a></li>
                             <li><a href="championship4.html">생활체육대회</a></li>
-                            <li><a href="championship5.html">미드아마챔피언십</a></li>
+                            <li><a href="championship5.html">미드아마챔피언십</a></li> -->
                         </div>
                     </ul>
                 </div>
