--- a/main.html
+++ b/main.html
@@ -228,19 +228,19 @@
                             <div class="swiper-container">
                                 <div class="swiper-wrapper">
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="./images/main/img_line_slide1.png" alt="img1" style="width:100%" />
+                                    <img src="./images/main/img_line_slide1.jpg" alt="img1" style="width:100%" />
                                     <p>전 or 후반홀 시작시 15초 영상<br /><b><span>전후반 홀 입장 동영상 광고</span></b></p>
                                   </div>
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="./images/main/img_line_slide2.png" alt="img1" style="width:100%" />
+                                    <img src="./images/main/img_line_slide2.jpg" alt="img1" style="width:100%" />
                                     <p>2020년 2월, 올해 전 기간 완판<br /><b><span>연습장 대형 광고 보드</span></b></p>
                                   </div>
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="./images/main/img_line_slide3.png" alt="img1"  style="width:100%" />
+                                    <img src="./images/main/img_line_slide3.jpg" alt="img1"  style="width:100%" />
                                     <p>예상 노출량 최고, 월 평균 2,300만 VIEW<br /><b><span>나의스윙모습 스킨 광고</span></b></p>
                                   </div>
                                   <div class="swiper-slide" style="width:805px">
-                                    <img src="./images/main/img_line_slide4.png" alt="img1"  style="width:100%" />
+                                    <img src="./images/main/img_line_slide4.jpg" alt="img1"  style="width:100%" />
                                     <p>업계 유일 동영상 6초 + 이미지 4초<br /><b><span>홀 이동 동영상 광고세트</span></b></p>
                                   </div>
                                 </div>
@@ -342,8 +342,8 @@
                         </p>
                         <div style="margin-top:70px">
                             <p style="font-size:19px;margin-bottom:20px;font-family:'Montserrat' !important;">Hot Line</p>
-                            <p style="font-size:35px;margin-bottom:10px;font-family:'Montserrat' !important;">070-8660-3996</p>
-                            <p style="font-size:35px;font-family:'Montserrat' !important;">070-8640-6134</p>
+                            <p style="font-size:35px;margin-bottom:10px;font-family:'Montserrat' !important;">070-8640-3937</p>
+                            <p style="font-size:35px;font-family:'Montserrat' !important;">070-8640-3932</p>
                         </div>
                     </div>
                 </div>
