--- a/sub/eventship/championship.html
+++ b/sub/eventship/championship.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="../../css/sub.css?v=1.0">
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
+    <style>
+    .practice_info_wrap dt{padding-left: 0;}
+    </style>
 </head>
 <body>  
     <div id="wrap">
@@ -106,7 +109,7 @@
                 </div>
                 <div class="sub_tab_menu">
                     <style>
-                        .sub_tab_menu li{width:16.5% !important;}
+                        .sub_tab_menu li{width:49.5% !important;}
                         .sub_title{margin-bottom:0 !important}
                         .tab1_content{margin-top:115px !important}
                         dl{width:calc(33% - 30px) !important}
@@ -118,10 +121,10 @@
                     <ul>
                         <li data-id="tab1" class="on" style="padding:18px 0">골프존 라이브<br />페스티벌 GLF 대회</li>
                         <li data-id="tab2">GTOUR</li>
-                        <li data-id="tab3">OPEN TOUR</li>
+                        <!-- <li data-id="tab3">OPEN TOUR</li>
                         <li data-id="tab4">GATOUR</li>
                         <li data-id="tab5">생활체육대회</li>
-                        <li data-id="tab6">미드아마챔피언십</li>
+                        <li data-id="tab6">미드아마챔피언십</li> -->
                     </ul>
                 </div>
                 
@@ -145,8 +148,8 @@
                             <dl>
                                 <dt>2</dt>
                                 <dd>판매 단가<br />
-                                    <span>6천만원 | 대회 1개월<br /><span style="margin-top:10px">6천만원 | 폐쇄형 대회<br />
-                                    <span style="font-size:15px">(지정된 특정 참여자만 대회 참여 가능)</span></span></span>
+                                    <span>5천만원 | 대회 1개월, 1개 CC <br>
+                                    <span style="font-size:15px">*CC 1개 추가 비용 1,000만원</span></span>
                                 </dd>
                             </dl>
                             <dl>
@@ -160,14 +163,10 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>판매 단가<br /><span>6천만원(1개CC,1개월)<br /><span style="margin-top:0;font-size:15px">*CC 1개 추가 비용 1,000만원</span></span></dd>
-                            </dl>
-                            <dl>
-                                <dt>6</dt>
                                 <dd>기타<br /><span>대회 시상품은 광고주 제공</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -225,7 +224,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
                 <!--// tab1 -->
@@ -263,7 +262,7 @@
                                     <br /><span style="margin-top:0;font-size:15px">[자세한 내용은 골프존 광고전문가에게 문의해 주세요]</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -321,7 +320,7 @@
                                     <td colspan="3">전면 배너 협의</td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab2 -->
                 <div id="tab3" class="tab_content">
@@ -364,7 +363,7 @@
                                     <br /><span style="margin-top:0;font-size:15px">[자세한 내용은 골프존 광고전문가에게 문의해 주세요]</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -422,7 +421,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab3 -->
                 <div id="tab4" class="tab_content">
@@ -460,7 +459,7 @@
                                     <br /><span style="margin-top:0;font-size:15px">[자세한 내용은 골프존 광고전문가에게 문의해 주세요]</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -518,7 +517,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab4 -->
                 <div id="tab5" class="tab_content">
@@ -560,7 +559,7 @@
                                     <br /><span style="margin-top:0;font-size:15px">[자세한 내용은 골프존 광고전문가에게 문의해 주세요]</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -618,7 +617,7 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab5 -->
                 <div id="tab6" class="tab_content">
@@ -652,7 +651,7 @@
                                     <br /><span style="margin-top:0;font-size:15px">[자세한 내용은 골프존 광고전문가에게 문의해 주세요]</span></dd>
                             </dl>
                         </div>
-                        <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
+                        <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
                         <div class="event_list_table_wrap">
                             <table>
                                 <colgroup>
@@ -710,11 +709,10 @@
                                     <td colspan="3"><span>전면 배너 협의</span></td>
                                 </tr>
                             </table>
-                        </div>
+                        </div> -->
                     </div>
                 </div><!--// tab5 -->
             </div>
-            </div>  
         </div>
         <!--// content -->
         <div class="footer_wrap">
