--- a/m/sub/eventship/championship.html
+++ b/m/sub/eventship/championship.html
@@ -146,10 +146,10 @@
                         <li class="on">골프존 라이브 페스티벌 GLF 대회</li>
                         <div>
                             <li><a href="championship1.html">GTOUR</a></li>
-                            <li><a href="championship2.html">OPEN TOUR</a></li>
+                            <!-- <li><a href="championship2.html">OPEN TOUR</a></li>
                             <li><a href="championship3.html">GATOUR</a></li>
                             <li><a href="championship4.html">생활체육대회</a></li>
-                            <li><a href="championship5.html">미드아마챔피언십</a></li>
+                            <li><a href="championship5.html">미드아마챔피언십</a></li> -->
                         </div>
                     </ul>
                 </div>
@@ -176,8 +176,8 @@
                     <dl>
                         <dt>2</dt>
                         <dd>판매 단가<br />
-                            <span>6천만원 | 대회 1개월<br />6천만원 | 폐쇄형 대회<br />
-                                <span style="font-size:12px">(지정된 특정 참여자만 대회 참여 가능)</span></span></dd>
+                            <span>5천만원 | 대회 1개월, 1개 CC</span>
+                        </dd>
                     </dl>
                     <dl>
                         <dt>3</dt>
@@ -190,63 +190,10 @@
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>판매 단가<br /><span>6천만원(1개CC,1개월)<br /><span style="font-size:12px">*CC 1개 추가 비용 1,000만원</span></span></dd>
-                    </dl>
-                    <dl>
-                        <dt>6</dt>
                         <dd>기타<br /><span>대회 시상품은 광고주 제공</span></dd>
                     </dl>
                 </div>
                 <div class="event_list_table_wrap">
-                    <h3>광고게재 영역</h3>
-                    <div>
-                        <h4>스크린 광고(게임 전)</h4>
-                        <ul>
-                            <li><b>로비 타이틀</b></li>
-                            <li><b>플레이어우측</b></li>
-                            <li><b>이벤트 홍보</b></li>
-                            <li><b>전면 팝업 협의</b></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h4>스크린 광고(게임 중)</h4>
-                        <ul>
-                            <li><b>홀입장 동영상</b></li>
-                            <li><b>티박스 바닥</b></li>
-                            <li><b>A보드</b></li>
-                            <li><b>홀 깃발</b></li>
-                            <li>가상광고</li>
-                            <li><b>나스모스킨</b></li>
-                            <li><b>홀 이동 로딩창</b></li>
-                            <li><b>스코어보드 상단</b></li>
-                            <li>스코어보드 하단</li>
-                            <li><b>메뉴상단</b></li>
-                            <li>홀 이동 동영상</li>
-                            <li>이벤트 출력 팝업</li>
-                            <li>이벤트<br />중간 성공 팝업</li>
-                            <li>이벤트<br />중간 실패 팝업</li>
-                            <li>이벤트<br />성공 팝업</li>
-                            <li>이벤트 실패 팝업</li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h4>골프존 닷컴(웹)</h4>
-                        <ul>
-                            <li><b>메인 중앙</b></li>
-                            <li><b>메인 우측</b></li>
-                            <li><b>GNB</b></li>
-                            <li><b>RON 우측</b></li>
-                        </ul>
-                    </div>
-                    <div>
-                        <h4>골프존 닷컴(앱)</h4>
-                        <ul>
-                            <li><b>메인 중앙</b></li>
-                            <li><b>이벤트 리스트</b></li>
-                            <li><b>이벤트 페이지</b></li>
-                            <li><b>전면 배너 협의</b></li>
-                        </ul>
-                    </div>
                 </div>
             </div>
         </div>
