--- a/sub/eventship/event.html
+++ b/sub/eventship/event.html
@@ -12,6 +12,9 @@
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css">
     <script src="js/slide.js"></script>
+    <style>
+    .practice_info_wrap dt{padding-left: 0;}
+    </style>
 </head>
 <body>  
     <div id="wrap">
