--- a/sub/screen/practice.html
+++ b/sub/screen/practice.html
@@ -9,6 +9,9 @@
     <script src="../../js/style_sub.js"></script>
     <link rel="stylesheet" href="../../css/reset.css">
     <link rel="stylesheet" href="../../css/sub.css?v=1.0">
+    <style>
+    .practice_info_wrap dt{padding-left: 0;}
+    </style>
 </head>
 <body>  
     <div id="wrap">
@@ -84,7 +87,7 @@
                         <li data-id="tab1" class="on">연습장 입장 동영상<br />광고 세트</li>
                         <li data-id="tab2">연습장 대형 광고보드<br />(좌 혹은 우)</li>
                         <li data-id="tab3">연습장 티박스 파티션<br />+ 티박스 바닥 광고</li>
-                        <li data-id="tab4">연습장 펜스<br />+ 150M 바닥 광고</li>
+                        <li data-id="tab4">연습장 펜스<br />(좌 혹은 우)</li>
                         <li data-id="tab5">연습장<br />퇴장 광고</li>
                     </ul>
                 </div>
@@ -96,30 +99,30 @@
                     <div class="tab1_content">
                         <h3>연습장 입장 동영상 광고 세트</h3>
                         <div class="movie_wrap">
-                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/PsZINevY4pc" frameborder="0" 
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/Frgby_Z-8MQ" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
                         <div class="practice_info_wrap">
                             <dl>
                                 <dt>1</dt>
-                                <dd>노출방식 및 시간<br /><span>동영상 15초 + 이미지</span></dd>
+                                <dd>노출방식 및 시간<br /><span>동영상 15초 + <br>로딩창 이미지 1초</span></dd>
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>노출시점<br /><span>연습장 입장시 노출</span></dd>
+                                <dd>노출시점<br /><span>연습장 입장시</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>50%(2구좌 롤링)</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>2구좌 롤링(50% 확률 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 160만회</span></dd>
+                                <dd>노출량<br /><span>330만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 1,800만원<br />4주(1개월) : 3,500만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 3,500만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -132,8 +135,8 @@
                     <div class="tab1_content">
                         <h3>연습장 대형 광고보드 (좌 혹은 우)</h3>
                         <div class="movie_wrap">
-                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/r0IZ9SlMXmI" frameborder="0" 
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/r0IZ9SlMXmI" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
                         <div class="practice_info_wrap">
@@ -147,15 +150,15 @@
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>독점</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>2구좌 롤링(50% 확률 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 460만회</span></dd>
+                                <dd>노출량<br /><span>650만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 : 1,100만원<br />4주 : 2,000만원</span></dd>
+                                <dd>단가<br /><span>좌측 1개월 : 2,000만원 <br />우측 1개월 : 1,500만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -167,8 +170,8 @@
                     <div class="tab1_content">
                         <h3>연습장 티박스 파티션 + 티박스 바닥 광고</h3>
                         <div class="movie_wrap">
-                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/zMzQDmGKyzc" frameborder="0" 
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/zMzQDmGKyzc" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
                         <div class="practice_info_wrap">
@@ -186,11 +189,11 @@
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 460만회</span></dd>
+                                <dd>노출량<br /><span>650만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 : 1,100만원<br />4주 : 2,000만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -200,10 +203,10 @@
                         <img src="../../images/sub/img_sub_userflow.png" alt="userflow" />
                     </div>
                     <div class="tab1_content">
-                        <h3>연습장 펜스 + 150M 바닥 광고</h3>
+                        <h3>연습장 펜스 (좌 혹은 우)</h3>
                         <div class="movie_wrap">
-                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/YAKr-waqHJA" frameborder="0" 
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/YAKr-waqHJA" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
                         <div class="practice_info_wrap">
@@ -217,15 +220,15 @@
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>노출확률 (판매방식)<br /><span>독점</span></dd>
+                                <dd>노출확률 (판매방식)<br /><span>3구좌 롤링(33% 확률 노출)</span></dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 160만회</span></dd>
+                                <dd>노출량<br /><span>220만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 : 800만원<br />4주 : 1,500만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 1,000만원</span></dd>
                             </dl>
                         </div>
                     </div>
@@ -237,8 +240,8 @@
                     <div class="tab1_content">
                         <h3>연습장 퇴장 광고</h3>
                         <div class="movie_wrap">
-                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/akLbeEz5sKw" frameborder="0" 
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
+                            <iframe width="100%" height="675" src="https://www.youtube.com/embed/p6k2H1NPYmM" frameborder="0"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
                         <div class="practice_info_wrap">
@@ -256,16 +259,15 @@
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>월평균 160만회</span></dd>
+                                <dd>노출량<br /><span>650만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>2주 : 800만원<br />4주 : 1,500만원</span></dd>
+                                <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                             </dl>
                         </div>
                     </div>
                 </div><!--// tab5 -->
-            </div>
             </div>  
         </div>
         <!--// content -->
