--- a/m/sub/screen/practice2.html
+++ b/m/sub/screen/practice2.html
@@ -119,7 +119,7 @@
                         <div>
                             <li><a href="practice.html">연습장 입장 동영상 광고 세트</a></li>
                             <li><a href="practice1.html">연습장 대형 광고보드 (좌 혹은 우)</a></li>
-                            <li><a href="practice3.html">연습장 펜스 + 150M 바닥 광고</a></li>
+                            <li><a href="practice3.html">연습장 펜스 (좌 혹은 우)</a></li>
                             <li><a href="practice4.html">연습장 퇴장 광고</a></li>
                         </div>
                     </ul>
@@ -150,11 +150,11 @@
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 460만회</span></dd>
+                        <dd>노출량<br /><span>700만회</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>단가<br /><span>2주 : 1,100만원 / 4주 : 2,000만원</span></dd>
+                        <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                     </dl>
                 </div>
             </div>
