--- a/m/sub/screen/practice4.html
+++ b/m/sub/screen/practice4.html
@@ -120,7 +120,7 @@
                             <li><a href="practice.html">연습장 입장 동영상 광고 세트</a></li>
                             <li><a href="practice1.html">연습장 대형 광고보드 (좌 혹은 우)</a></li>
                             <li><a href="practice2.html">연습장 티박스 파티션 + 티박스 바닥 광고</a></li>
-                            <li><a href="practice3.html">연습장 펜스 + 150M 바닥 광고</a></li>
+                            <li><a href="practice3.html">연습장 펜스 (좌 혹은 우)</a></li>
                         </div>
                     </ul>
                 </div>
@@ -138,11 +138,11 @@
                 <div class="practice_info_wrap">
                     <dl>
                         <dt>1</dt>
-                        <dd>노출방식 및 시간<br /><span>이미지</span></dd>
+                        <dd>노출방식 및 시간<br /><span>이미지 5초</span></dd>
                     </dl>
                     <dl>
                         <dt>2</dt>
-                        <dd>노출시점<br /><span>연습장 플레이 중 지속</span></dd>
+                        <dd>노출시점<br /><span>연습장 퇴장시</span></dd>
                     </dl>
                     <dl>
                         <dt>3</dt>
@@ -150,11 +150,11 @@
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 160만회</span></dd>
+                        <dd>노출량<br /><span>700만회</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>단가<br /><span>2주 : 800만원 / 4주 : 1,500만원</span></dd>
+                        <dd>단가<br /><span>1개월 : 2,000만원</span></dd>
                     </dl>
                 </div>
             </div>
