--- a/m/sub/screen/practice.html
+++ b/m/sub/screen/practice.html
@@ -119,7 +119,7 @@
                         <div>
                             <li><a href="practice1.html">연습장 대형 광고보드 (좌 혹은 우)</a></li>
                             <li><a href="practice2.html">연습장 티박스 파티션 + 티박스 바닥 광고</a></li>
-                            <li><a href="practice3.html">연습장 펜스 + 150M 바닥 광고</a></li>
+                            <li><a href="practice3.html">연습장 펜스 (좌 혹은 우)</a></li>
                             <li><a href="practice4.html">연습장 퇴장 광고</a></li>
                         </div>
                     </ul>
@@ -138,23 +138,23 @@
                 <div class="practice_info_wrap">
                     <dl>
                         <dt>1</dt>
-                        <dd>노출방식 및 시간<br /><span>동영상 15초 + 이미지</span></dd>
+                        <dd>노출방식 및 시간<br /><span>동영상 15초 + <br>로딩창 이미지 1초</span></dd>
                     </dl>
                     <dl>
                         <dt>2</dt>
-                        <dd>노출시점<br /><span>연습장 입장시 노출</span></dd>
+                        <dd>노출시점<br /><span>연습장 입장시</span></dd>
                     </dl>
                     <dl>
                         <dt>3</dt>
-                        <dd>노출확률 (판매방식)<br /><span>50%(2구좌 롤링)</span></dd>
+                        <dd>노출확률 (판매방식)<br /><span>2구좌 롤링(50% 확률 노출)</span></dd>
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 160만회</span></dd>
+                        <dd>노출량<br /><span>700만회</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>단가<br /><span>2주 1,800만원 / 4주(1개월) : 3,500만원</span></dd>
+                        <dd>단가<br /><span>1개월 : 3,500만원</span></dd>
                     </dl>
                 </div>
             </div>
