--- a/m/sub/screen/practice1.html
+++ b/m/sub/screen/practice1.html
@@ -119,7 +119,7 @@
                         <div>
                             <li><a href="practice.html">연습장 입장 동영상 광고 세트</a></li>
                             <li><a href="practice2.html">연습장 티박스 파티션 + 티박스 바닥 광고</a></li>
-                            <li><a href="practice3.html">연습장 펜스 + 150M 바닥 광고</a></li>
+                            <li><a href="practice3.html">연습장 펜스 (좌 혹은 우)</a></li>
                             <li><a href="practice4.html">연습장 퇴장 광고</a></li>
                         </div>
                     </ul>
@@ -146,15 +146,15 @@
                     </dl>
                     <dl>
                         <dt>3</dt>
-                        <dd>노출확률 (판매방식)<br /><span>독점</span></dd>
+                        <dd>노출확률 (판매방식)<br /><span>2구좌 롤링(50% 확률 노출)</span></dd>
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 460만회</span></dd>
+                        <dd>노출량<br /><span>700만회</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>단가<br /><span>2주 : 1,100만원 / 4주 : 2,000만원</span></dd>
+                        <dd>단가<br /><span>좌측 1개월 : 2,000만원 <br />우측 1개월 : 1,500만원</span></dd>
                     </dl>
                 </div>
             </div>
