--- a/m/sub/screen/practice3.html
+++ b/m/sub/screen/practice3.html
@@ -115,7 +115,7 @@
             <div>
                 <div class="sub_tab_wrap">
                     <ul>
-                        <li class="on">연습장 펜스 + 150M 바닥 광고</li>
+                        <li class="on">연습장 펜스 (좌 혹은 우)</li>
                         <div>
                             <li><a href="practice.html">연습장 입장 동영상 광고 세트</a></li>
                             <li><a href="practice1.html">연습장 대형 광고보드 (좌 혹은 우)</a></li>
@@ -129,7 +129,7 @@
                 </div>
             </div>
             <div class="sub_cont">
-                <h3>연습장 펜스 + 150M 바닥 광고</h3>
+                <h3>연습장 펜스 (좌 혹은 우)</h3>
                 <div class="movie_wrap">
                     <iframe width="100%" height="100%" src="https://www.youtube.com/embed/YAKr-waqHJA" frameborder="0" 
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen=""></iframe>
@@ -145,15 +145,15 @@
                     </dl>
                     <dl>
                         <dt>3</dt>
-                        <dd>노출확률 (판매방식)<br /><span>독점</span></dd>
+                        <dd>노출확률 (판매방식)<br /><span>4구좌 롤링(25% 확률 노출)</span></dd>
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>노출량<br /><span>월평균 160만회</span></dd>
+                        <dd>노출량<br /><span>700만회</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>단가<br /><span>2주 : 800만원 / 4주 : 1,500만원</span></dd>
+                        <dd>단가<br /><span>1개월 : 1,500만원</span></dd>
                     </dl>
                 </div>
             </div>
