--- a/m/sub/eventship/event2.html
+++ b/m/sub/eventship/event2.html
@@ -170,29 +170,28 @@
                     </dl>
                     <dl>
                         <dt>2</dt>
-                        <dd>미션 달성시 골프존앱 선물 상자를 통하여 선물 지급</dd>
+                        <dd>예상 참여 횟수 (라운드 수)<br />
+                            <span>100만여 회</span></dd>
                     </dl>
                     <dl>
                         <dt>3</dt>
-                        <dd>광고 예상 노출량 : 약 1,200만회</dd>
+                        <dd>목표달성 시 100% 교환권 증정</dd>
                     </dl>
                     <dl>
                         <dt>4</dt>
-                        <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
+                        <dd>판매단가<br /><span>6,000만원</span></dd>
                     </dl>
                     <dl>
                         <dt>5</dt>
-                        <dd>판매단가<br /><span>5,000만원 (15개CC, 1개월)<br />
-                            <span style="font-size:12px">*CC 1개 추가비용 1,000만원</span></span></dd>
+                        <dd>광고 예상 노출량<br /><span>7,300만회</span></dd>
                     </dl>
                     <dl>
                         <dt>6</dt>
-                        <dd>기타<br /><span>미션 성공<br />
-                            경품은 광고주 제공</span></dd>
+                        <dd>330여개 CC 중 인기 10개 CC 선택</dd>
                     </dl>
                 </div>
                 <div class="event_list_table_wrap">
-                    <h3>광고게재 영역</h3>
+                    <!-- <h3>광고게재 영역</h3>
                     <div>
                         <h4>스크린 광고(게임 전)</h4>
                         <ul>
@@ -240,7 +239,7 @@
                             <li><b>이벤트 페이지</b></li>
                             <li><b>전면 배너 협의</b></li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
