--- a/sub/eventship/event.html
+++ b/sub/eventship/event.html
@@ -506,24 +506,24 @@
                             </dl>
                             <dl>
                                 <dt>2</dt>
-                                <dd>미션 달성시 골프존앱 <br>선물 상자를 통하여 <br>선물 지급</dd>
+                                <dd>예상 참여 횟수 (라운드 수)<br />
+                                    <span>100만여 회</span></dd>
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>광고 예상 노출량 : 약 1,200만회</dd>
+                                <dd>목표달성 시 100% 교환권 증정</dd>
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>예상 참여 횟수(라운드 수) : 12만~15만여 회</dd>
+                                <dd>판매단가<br /><span>6,000만원</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>판매단가 : 6,000만원 (15개CC, 1개월) <br /><span style="font-size:15px">*CC 1개 추가비용 1,000 만원</span></dd>
+                                <dd>광고 예상 노출량<br /><span>7,300만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>6</dt>
-                                <dd>기타<br /><span>미션 성공<br />
-                                    경품은 광고주 제공</span></dd>
+                                <dd>330여개 CC 중 인기 10개 CC 선택</dd>
                             </dl>
                         </div>
                         <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
@@ -595,7 +595,7 @@
                             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                             </iframe>
                         </div>
-                        <div class="practice_info_wrap w50">
+                        <div class="practice_info_wrap">
                             <dl>
                                 <dt>1</dt>
                                 <dd>전국 골프존 회원들의 경기데이터와 <br>
@@ -612,10 +612,6 @@
                                 <dd>예상 참여 횟수(라운드 수) : 60만여 회 + α<br /><span style="font-size:15px"> [자세한 내용은 골프존 광고전문가에게 문의해 주세요]
                                 </span>
                                 </dd>
-                            </dl>
-                            <dl>
-                                <dt>4</dt>
-                                <dd>기타<br /><span>2023년 판매완료</span></dd>
                             </dl>
                         </div>
                         <!-- <h3 style="font-size:30px;color:#222;margin-bottom:40px;margin-top:185px">광고게재 영역</h3>
