--- a/m/sub/eventship/championship1.html
+++ b/m/sub/eventship/championship1.html
@@ -173,7 +173,7 @@
                     </dl>
                     <dl>
                         <dt>3</dt>
-                        <dd>주관방송사(골프채널), 스크린골프존 방영(본방 및 재방)</dd>
+                        <dd>IPTV '스크린골프존' 채널 방영, <br>유튜브 라이브, <br>네이버골프 라이브</dd>
                     </dl>
                     <dl>
                         <dt>4</dt>
