--- a/sub/eventship/championship.html
+++ b/sub/eventship/championship.html
@@ -148,7 +148,7 @@
                             <dl>
                                 <dt>2</dt>
                                 <dd>판매 단가<br />
-                                    <span>5천만원 | 대회 1개월, 1개 CC <br>
+                                    <span>6천만원 | 대회 1개월, 1개 CC <br>
                                     <span style="font-size:15px">*CC 1개 추가 비용 1,000만원</span></span>
                                 </dd>
                             </dl>
@@ -248,7 +248,8 @@
                             </dl>
                             <dl>
                                 <dt>3</dt>
-                                <dd>주관방송사(골프채널), 스크린골프존 방영(본방 및 재방)
+                                <dd>
+                                    IPTV '스크린골프존' 채널 방영, <br>유튜브 라이브, 네이버골프 라이브
                                 </dd>
                             </dl>
                             <dl>
