--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -91,6 +91,7 @@
                                 width: 1300px;
                                 margin: 0;
                             }
+                            .marketing_wrap .swiper{padding-right: 1px;}
                             aside ul,
                             aside li{list-style: none;}
                             .menu-list a.is-active{background-color: #006eb7;}
@@ -846,7 +847,10 @@
                                 <div class="swiper mySwiper2" style="width:830px;margin:100px auto 0 auto;text-align: center;">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_62.png?ver=2" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_101-1.png" alt="img1" />
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <img src="../../images/sub/img_marketing_pop_slide_101-2.png" alt="img1" />
                                         </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
