--- a/m/index.html
+++ b/m/index.html
@@ -182,7 +182,7 @@
                             </div>
                             </div>
                             <div class="swiper-slide">
-                            <img src="images/main/main_img_solution6.jpg?ver=2">
+                            <img src="images/main/main_img_solution6.jpg?ver=2" style="border: 1px solid #dcdcdc;">
                             <div>
                                 <h3>한화생명보험</h3>
                                 <p>#모바일광고</p>
