--- a/m/sub/golfzon/app.html
+++ b/m/sub/golfzon/app.html
@@ -168,7 +168,7 @@
                     </dl>
                     <dl>
                         <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" /></dt>
-                        <dd>CTR 3.0% (23년 1-2월 기준)</dd>
+                        <dd>CTR 3.0% (23년 3월 기준)</dd>
                     </dl>
                 </div>
             </div>
