--- a/sub/golfzon/app.html
+++ b/sub/golfzon/app.html
@@ -124,7 +124,7 @@
                                 <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />4주 - 2,000만원<br>10일 - 1,000만원</dt>
                             </dl>
                             <dl>
-                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />CTR 3.0% (23년 1-2월 기준)</dt>
+                                <dt><img src="../../images/sub/ico_golfzon_dt.png" alt="" />CTR 3.0% (23년 3월 기준)</dt>
                             </dl>
                         </div>
                     </div>
