--- a/sub/screen/practice.html
+++ b/sub/screen/practice.html
@@ -118,7 +118,7 @@
                             </dl>
                             <dl>
                                 <dt>4</dt>
-                                <dd>노출량<br /><span>700만회</span></dd>
+                                <dd>노출량<br /><span>350만회</span></dd>
                             </dl>
                             <dl>
                                 <dt>5</dt>
@@ -158,7 +158,7 @@
                             </dl>
                             <dl>
                                 <dt>5</dt>
-                                <dd>단가<br /><span>1개월 : 1,500만원</span></dd>
+                                <dd>단가<br /><span>좌측 1개월 : 2,000만원 <br />우측 1개월 : 1,500만원</span></dd>
                             </dl>
                         </div>
                     </div>
