--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -106,6 +106,7 @@
                                 float: none;
                                 width: 100%;
                                 margin: 0;
+                                box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;-o-box-sizing: border-box;
                             }
                             .marketing img{width: 100%;}
                             .swiper-slide{box-sizing: border-box;-moz-box-sizing: border-box;-webkit-box-sizing: border-box;-o-box-sizing: border-box;}
